# deepresearch-enterprise-agent

./: .env.docker.example  .gitignore  LICENSE  README.md  docker-compose.yml  package-lock.json  run.sh  run_backend.bat  run_backend.sh  run_eval.bat  run_fontend.bat  run_fontend.sh  run_frontend.bat  run_frontend.sh  run_uvicorn_backend.bat  run_worker.bat  run_worker.sh
backend/: .env.example  eval_report_20260613_142601.json  langgraph.json  pyproject.toml  模型配置说明.md
backend/eval/: README.md  __init__.py  evaluator.py  judge.py  prompts.py  run_eval.py  test_set.json
backend/src/agent/: __init__.py  app.py  audit.py  base_agent.py  configuration.py  exceptions.py  graph.py  limits.py  logger.py  observability.py  post.py  prompts.py  reranker.py  runtime_config.py  search_cache.py  state.py  task_queue.py  tools_and_schemas.py  utils.py  worker.py
backend/src/agent/auth/: authorization.py  langgraph_auth.py  middleware.py  routes.py  session.py
backend/src/agent/db/: engine.py  init_db.py  models.py  results.py
backend/src/agent/kb/: __init__.py  extractor.py  fact_store.py  lifecycle.py
backend/src/agent/llm/: llm.py
backend/test/: conftest.py  test_agent.py  test_app.py  test_async_agent.py  test_async_fact_store.py  test_audit.py  test_auth.py  test_base_agent.py  test_configuration.py  test_eval_gate.py  test_exceptions.py  test_fact_extractor.py  test_fact_store.py  test_graph.py  test_kb_lifecycle.py  test_limits.py  test_llm.py  test_logger.py  test_post.py  test_rate_limiter.py  test_reranker.py  test_research_agent.py  test_runtime_config.py  test_search_cache.py  test_task_queue.py  test_tools_and_schemas.py  test_utils.py  test_writer_agent.py  测试指引.md
(+45 files in other folders)
